basket-localStorage-finished.

--- a/index.html
+++ b/index.html
@@ -34,6 +34,7 @@
 
         <div class="likes">
           <i class="bi bi-bookmark-heart-fill"></i>
+          <div class="list"></div>
         </div>
       </header>
       <!--! Header Section END -->
@@ -46,6 +47,12 @@
 
         <section class="shopping">
             <h2>Basket</h2>
+            <div class="button-area">
+              <button id="clear">
+                <i class="bi bi-trash3"></i>
+               <span>Clear All</span> 
+              </button>
+            </div>
             <ul>
                 <li>It's Empty</li>
             </ul>
